apps/system/security/oauth-proxy/deployment.yaml
# core/oauth-proxy/deployment.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: oauth-proxy
  labels:
    app: oauth-proxy
spec:
  selector:
    matchLabels:
      app: oauth-proxy
  template:
    metadata:
      labels:
        app: oauth-proxy
        networking/expose-web-ui: "true"
    spec:
      containers:
        - name: oauth-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy
          imagePullPolicy: IfNotPresent
          args:
            - --config=/etc/oauth2-proxy/oauth2-proxy.cfg
          ports:
            - name: web-ui
              containerPort: 4180
              hostPort: 4180
              protocol: TCP
          resources:
            requests:
              cpu: "10m"
              memory: "32Mi"
            limits:
              cpu: "50m"
              memory: "64Mi"
          volumeMounts:
            - name: config
              mountPath: /etc/oauth2-proxy
      volumes:
        - name: config
          configMap:
            name: oauth2-proxy-configmap
