apps/system/security/oauth-proxy/dragonfly-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: oauth-dragonfly-policy
spec:
  endpointSelector:
    matchLabels:
      app: oauth-dragonfly
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: oauth-proxy
      toPorts:
        - ports:
            - port: "6379"
              protocol: "TCP"
