apps/system/security/oauth-proxy/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: oauth-proxy-policy
spec:
  endpointSelector:
    matchLabels:
      app: oauth-proxy

  # This defines the allowed outbound (egress) traffic
  egress:
    # Allow egress to Traefik for hairpinning
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: traefik
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "9443"  # traefik-internal targetPort
              protocol: TCP
            - port: "8443"  # traefik-dmz targetPort
              protocol: TCP
            - port: "8443"
              protocol: UDP
            - port: "9443"
              protocol: UDP

    - toEndpoints:
        - matchLabels:
            app: oauth-dragonfly
      toPorts:
        - ports:
            - port: "6379"
              protocol: "TCP"
    - toEntities:
        - "world"
      toPorts:
        # For 2FA/TOTP time-sync and update checks
        - ports:
            # for NTP
            - port: "123"
              protocol: UDP
            - port: "443"
              protocol: TCP
            - port: "443"
              protocol: UDP
            # For SMTP (e.g., Gmail)
            - port: "587"
              protocol: TCP
            - port: "465"
              protocol: TCP
  ingress:
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "4180"
              protocol: "TCP"
