apps/system/security/oauth-proxy/redis-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: oauth-redis-policy
spec:
  endpointSelector:
    matchExpressions:
      - key: "k8s:app"
        operator: "In"
        values:
          - "oauth-redis"
          - "oauth-redis-s"
  ingress:
    - fromEndpoints:
        - matchLabels:
            "k8s:app": "oauth-proxy"
      toPorts:
        - ports:
            - port: "6379"
              protocol: "TCP"
            - port: "26379"
              protocol: "TCP"
    - fromEndpoints:
        - matchLabels:
            "k8s:name": "redis-operator"
            "k8s:io.kubernetes.pod.namespace": "data-services"
      toPorts:
        - ports:
            - port: "6379"
              protocol: "TCP"
            - port: "26379"
              protocol: "TCP"
    - fromEndpoints:
        - matchExpressions:
            - key: "k8s:app"
              operator: "In"
              values:
                - "oauth-redis"
                - "oauth-redis-s"
      toPorts:
        - ports:
            - port: "6379"
              protocol: "TCP"
            - port: "26379"
              protocol: "TCP"
  egress:
    # Allow them to talk to the Redis Data nodes (for sync and health checks)
    - toEndpoints:
        - matchLabels:
            "k8s:app": "oauth-redis"
      toPorts:
        - ports:
            - port: "6379"
              protocol: "TCP"
    
    # Allow them to talk to Sentinel nodes (for quorum/voting)
    - toEndpoints:
        - matchLabels:
            "k8s:app": "oauth-redis-s"
      toPorts:
        - ports:
            - port: "26379"
              protocol: "TCP"
